demos/services-and-networking/02-nginx-ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingreess-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingreess-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.30.0
      args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
        - --election-id=ingress-controller-leader
        - --ingress-class=nginx
        - --watch-namespace=$(POD_NAMESPACE)
      ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
